--- a/doc/versionhistory.tex
+++ b/doc/versionhistory.tex
@@ -36,4 +36,7 @@
   \vhEntry{0.6.3}{2022-02-15}{MS|GW}{
     fixed spelling error and documented (slip-) turnout option: points=moving; updated link to signalschablone; automated testing and releasing
   }
+  \vhEntry{0.7.0}{2022-04-02}{MS|GW}{
+    revised symbol and syntax for balises; replaced "\textbackslash gettikzxy" with "\textbackslash path let" syntax; fixed PackageWarning Error in development mode; fixed foreground of sidetrack (alias)
+  }
 \end{versionhistory}
